--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/1.jpg">
+        <p>This site provides weather information of a region or a country. You can search by region/country name or with zip code. <br><br> All the data displayed are retrieved from mapbox.com and darksky.net.</p>
     </div>
     
     {{>footer}}
