Code Refactored and Dependencies Updated

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,31 +4,18 @@ body {
     max-width: 650px;
     margin: 0 auto;
     padding: 0 16px;
-
     display: flex;
     flex-direction: column;
-    min-height: 100vh
+    min-height: 100vh;
 }
 
 .main-content {
     flex-grow: 1;
 }
 
-footer {
-    color: #888888;
-    border-top: 1px solid #eeeeee;
-    margin-top: 16px;
-    padding: 16px 0;
-}
-
 header {
     margin-top: 16px;
     margin-bottom: 48px;
-}
-
-h1 {
-    font-size: 64px;
-    margin-bottom: 16px;
 }
 
 header a {
@@ -37,8 +24,23 @@ header a {
     text-decoration: none;
 }
 
-.portrait {
-    width: 250px;
+.logoContainer {
+    display: flex;
+    align-items: center;
+}
+
+.logoContainer img { 
+    margin-right: 10px;
+}
+
+h2 {
+    font-size: 40px;
+    margin-bottom: 16px;
+    color: #000000;
+}
+
+.dataContainer {
+    margin-top: 60px;
 }
 
 input{
@@ -53,3 +55,17 @@ button{
     color: white;
     padding: 8px;
 }
+
+footer {
+    color: #888888;
+    border-top: 1px solid #eeeeee;
+    margin-top: 16px;
+    padding: 16px 0;
+}
+
+
+
+
+
+
+
